<resources>
    <string name="app_name">ToDoList</string>
    <string name="task_name">Task Name</string>
    <string name="_00_00">00:00</string>
    <string name="add_task">Add Task</string>
    <string name="enter_task_title">Enter task title</string>
    <string name="task_title">Task Title</string>
    <string name="time">Time</string>
    <string name="enter_time">Enter time</string>
    <string name="new_task">New Task</string>
    <string name="submit">Submit</string>
    <string name="remove_all_tasks">Remove all tasks</string>
    <string name="remove_current_task">Remove current task</string>
    <string name="night_mode">Night Mode</string>
    <string name="ad_unit_id_interstitial">ca-app-pub-8985091336089071/2219126192</string>
    <string name="ad_unit_id_banner">ca-app-pub-8985091336089071/8100856887</string>
    <string name="no_tasks_added_click_add_tasks_to_create_one">No tasks added. Click Add Tasks to create one.</string>
    <string name="this_is_an_ad_banner">This is an ad banner</string>
</resources>