<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="wrap_content"
    android:padding="16dp"
    android:background="@color/colorTodoListItem"
    android:layout_margin="8dp">

    <TextView
        android:id="@+id/txt_task_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/task_name"
        android:textColor="@color/colorBlack"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        android:layout_toStartOf="@+id/txt_timestamp"
        android:layout_toLeftOf="@+id/txt_timestamp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_centerVertical="true"/>

    <TextView
        android:id="@+id/txt_timestamp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_00_00"
        android:textColor="@color/colorBlack"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"/>
</RelativeLayout>