<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:weightSum="10"
    tools:context=".Fragments.TodayFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="10">

        <TextView
            android:id="@+id/txt_no_tasks_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_tasks_added_click_add_tasks_to_create_one"
            android:textSize="20sp"
            android:layout_centerInParent="true"
            android:visibility="gone"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_todo_list_today"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            tools:listitem="@layout/todo_list_item" />

    </RelativeLayout>
    <Button
        android:id="@+id/btn_add_task_today"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:background="@color/colorPrimaryDark"
        android:text="@string/add_task"
        android:theme="@style/ThemeOverlay.AppCompat.Dark" />

</LinearLayout>